--- a/file2.html
+++ b/file2.html
@@ -6,6 +6,8 @@
     <title>Versio Control</title>
 </head>
 <body>
+    <h1>Lorem, ipsum.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, rem.</p>
     
 </body>
 </html>
