--- a/file2.html
+++ b/file2.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Versio Control</title>
 </head>
 <body>
     <h1>Lorem, ipsum.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, rem.</p>
+
     
 </body>
 </html>
